[package]
name = "sunnycat"
version = "0.3.6"
authors = ["Sunny <jinheking@gmail.com>"]
edition = "2021"
gitversion = "51a2db2715ea844d3b4765aaef9343bd2cd4b824"
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "A tool to search log files"
readme = "README.md"
homepage = "https://github.com/sunnyrust/sunnycat"
repository = "https://github.com/sunnyrust/sunnycat"
keywords = ["cli", "log"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/crates/rustyline
rustyline = "5.0.3"
ansi_term = "0.12.1"
clap = "2.33.0"
libc = "0.2.65"
encoding = "0.2.33"
encodingbufreader = "0.1.1"
shadow-rs = "0.29.0"
colored = "2.1.0"
crossterm = "0.27.0"
digest = "0.10.7"
md-5 = "0.10.6"
hex = "0.4.3"
[build-dependencies]
shadow-rs = "0.29.0"
